[package]
name = "hn00"
version = "0.1.0"
authors = ["Michael Angerman <stormasm@gmail.com>"]
edition = "2018"

[dependencies]
serde = "*"
serde_json = "*"
serde_derive = "*"
redis = "*"
#reqwest = { git = "https://github.com/seanmonstar/reqwest" }

reqwest = "0.10.0-alpha.1"

tokio = "0.2.0-alpha.5"

#tokio = { git = "https://github.com/tokio-rs/tokio.git" }
#futures-preview = "0.3.0-alpha.19"


## default-tls
#hyper-tls = { version = "=0.4.0-alpha.4", optional = true }
#native-tls = { version = "0.2", optional = true }
#tokio-tls = { version = "=0.3.0-alpha.6", optional = true }
